kustomize/kubernetes-base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  labels:
    app: gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
        - name: gateway-api
          image: gateway-api
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 750Mi
              cpu: 350m
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /actuator/health
            periodSeconds: 300
            timeoutSeconds: 300
          livenessProbe:
            httpGet:
              port: 8000
              path: /actuator/health
            periodSeconds: 300
            timeoutSeconds: 300
