kustomize/kubernetes-base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gateway-api-public-ip
    kubernetes.io/ingress.allow-http: "false"
    netwroking.gke.io/managed-certificates: gateway-api-ssl
spec:
  rules:
    - host: api.suleymankotan.com
      http:
        paths:
          - backend:
              serviceName: gateway-service
              servicePort: 8000
